k8s/ingressroute.yaml
# IngressRoute for mi-primera-plataforma
# Traefik v3 uses traefik.io/v1alpha1

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mi-primera-plataforma
  namespace: plataformas-web
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mi-primera-plataforma.viko.dev`)
      kind: Rule
      services:
        - name: nextjs
          port: 3000
      middlewares:
        - name: compress
          namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: traefik
spec:
  compress: {}
